revise traversal